<resources>
    <string name="app_name">StocksMarketsNotifier</string>
    // TODO: Get the SenderID from the Developer Console
    <string name="gcm_defaultSenderId" translatable="false">734282912746</string>
    <string name="stock_name">Stock Name</string>
    <string name="enter_your_name_email_here">Enter your name/email here</string>
    <string name="text">Sign In</string>
    <string name="higher_value">Higher value($)</string>
    <string name="higher_value_percents">Higher value(%)</string>
    <string name="lower_value">Lower value(%)</string>
    <string name="start_follow">Start follow</string>
    <string name="lower_value_absolute">Lower value($)</string>
    <string name="higher_value_input_error_message">Higher value can\'t be lower than current price!</string>
    <string name="lower_input_error_message">Lower Value can\'t be higher than current price!</string>
    <string name="content_authority" translatable="false">dor.only.dorking.android.stocksmarketsnotifier</string>
    <string name="stop_follow">Stop follow</string>
</resources>
