<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="dor.only.dorking.android.stocksmarketsnotifier.SecurityPresent">

    <TextView
        android:id="@+id/text_stock_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <ProgressBar
        android:id="@+id/progressbar_real_time_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:id="@+id/llayout_follow_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


    <TextView
        android:id="@+id/text_rtinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/llayout_higher_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="6dp"
        >


        <EditText
            android:id="@+id/editText_higher_value_absolute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/higher_value"
            android:inputType="numberDecimal"

            />

        <EditText

            android:id="@+id/editText_higher_value_percents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/higher_value_percents"
            android:inputType="numberDecimal"


            />




    </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/llayout_lower_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="6dp"
            >

            <EditText
                android:id="@+id/editText_lower_value_absolute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/lower_value_absolute"
                android:inputType="numberDecimal"

                />

            <EditText

                android:id="@+id/editText_lower_value_percents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/lower_value"
                android:inputType="numberDecimal"


                />




        </LinearLayout>
    </HorizontalScrollView>
        <LinearLayout
            android:id="@+id/ll_action_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <Button
            android:id="@+id/button_start_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_follow"
            android:layout_gravity="center_horizontal"
            />
        <Button
            android:id="@+id/button_stop_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_follow"
            android:visibility="gone"
            />
        </LinearLayout>
    </LinearLayout>






    <WebView
        android:id="@+id/web_stock_website_stock_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>
